This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/23/25: Fixed crash when hole finder is run on a single hole (In 4.2).

5/23/25: Fixed direction of beam movement with Shift arrow keys (In 4.2).

5/18/25: SEM_4-2-1
5/18/25: Fixed crash in ReportLastHoleVectors (in 4.2).

5/15/25: Fixed management of imaging states when realigning to a grid map in a
multigrid run (In 4.2).

5/15/25: Improved beam stop control on Thermo scopes to work through
SEM-AutoIT if it is present (In 4.2).

5/13/25: SEM_4-2-0 stable
5/13/25: Fixed some problems with DE-MC being used between images and a
problem with Apollo with particular settings.

5/13/25: SEM_4-1-25
5/13/25: Added an entry in the Help menu to list debug output key letters.

* 5/13/25: UI Automation for controlling apertures and getting grid names will
now try to open the needed panel in the lower right of the TEM UI instead of
changing workset tabs.  The default is now to monitor C2 aperture on Titan
scopes when possible.

5/10/25: When frame acquisition is turned on in camera setup dialog and
exposure time is less than frame time, it will try to change frame time and
keep exposure the same.

5/9/25: Made it set unchanged properties in DE server on every acquisition
unless a some kind of operation is running, in case images are taken in MC.

* 5/7/25: Added option in Navigator Realign setup dialog to apply setting for
treatment of image shift to Realign to Item run from Navigator dialog or menu.

5/7/25: Improved behavior of program and ability to exit when FEI-SEMserver
dies or scope computer dies.

5/7/25: Added option to WaitForMidnight to close valves and reopen them.

5/7/25: Fixed Step To & Adjust IS not stopping for custom pattern (In 5.1).

5/5/25: SEM_4-2-0beta16